# life-backend

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl
.github/: pull_request_template.md  repository-details.md  settings.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  rust.yml
benches/: benchmark.rs
examples/: board.rs  format_plaintext.rs  format_rle.rs  game.rs
patterns/: 2x2_crawler.rle  2x2_largedomino.rle  2x2_largetetromino.rle  34life_36bitfortress.rle  34life_block.rle  34life_glider.rle  34life_loaf.rle  34life_z.rle  3blocktwinbeesshuttle.cells  3blocktwinbeesshuttle.rle  acorn.rle  bheptomino.rle  blinker.cells  blinker.rle  block.cells  block.rle  boat.cells  boat.rle  bunnies.rle  centinal.cells  centinal.rle  century.rle  copperhead.cells  copperhead.rle  daynight_rocket.rle  diehard.rle  eheptomino.rle  fheptomino.rle  glider.cells  glider.rle  herschel.rle  highlife_bomber.rle  highlife_p10.rle  highlife_p7.rle  koksgalaxy.cells  koksgalaxy.rle  loafer.cells  loafer.rle  lwss.cells  lwss.rle  (+21 more)
src/: board.rs  boardrange.rs  format.rs  game.rs  lib.rs  position.rs  rule.rs
src/format/: plaintext.rs  rle.rs
src/format/plaintext/: builder.rs  core.rs  parser.rs  tests.rs
src/format/rle/: builder.rs  core.rs  parser.rs  tests.rs
tests/: format_plaintext.rs  format_rle.rs  game.rs
