[package]
name = "life-backend"
version = "0.1.0"
authors = ["Masaki Wakabayashi"]
edition = "2021"
description = "A backend implementation of Conway's Game of Life"
repository = "https://github.com/masaki-wk/life-backend"
keywords = ["cellular-automata", "conway", "game-of-life"]
categories = ["science", "simulation"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
fnv = "1.0.7"
num-iter = "0.1.43"
num-traits = "0.2.15"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
