[package]
name = "life-backend"
version = "0.0.2"
authors = ["Masaki Wakabayashi"]
edition = "2018"
rust-version = "1.65.0" # because the code in this package uses `let...else` statements
description = "A backend implementation of Conway's Game of Life"
repository = "https://github.com/masaki-wk/life-backend"
license = "MIT OR Apache-2.0"
keywords = ["cellular-automata", "conway", "game-of-life"]
categories = ["science", "simulation"]

[dependencies]
anyhow = "1.0.72"
fnv = "1.0.7"
num-iter = "0.1.43"
num-traits = "0.2.15"

[dev-dependencies]
clap = { version = "4.3.12", features = ["derive"] } # only for examples/games.rs
criterion = { version = "0.5.1", features = ["html_reports"] } # only for benches/benchmark.rs

[[bench]]
name = "benchmark"
harness = false

# Since this crate is platform independent, limit the targets that should be built on Docs.rs to a single
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
